samples/_failures_safe/1761443439_1e6e6a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c84feacb.c: In function ‘main’:
./samples/SAFE/__tmp_c84feacb.c:145:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  145 |     size_t decompressed
      |     ^~~~~~
./samples/SAFE/__tmp_c84feacb.c:145:5: error: expected declaration or statement at end of input
